--- a/source/form.html
+++ b/source/form.html
@@ -158,7 +158,7 @@
           <div class="form__field-wrapper-checkbox">
             <p class="form__checkbox-wrapper">
               <input class="visually-hidden form__checkbox-input" id="sugar" type="checkbox" name="sugar-substitute"
-                checked disabled>
+                checked>
               <label class="form__label form__checkbox-label" for="sugar">Сахарозаменитель</label>
             </p>
             <p class="form__checkbox-wrapper">
