--- a/source/catalog.html
+++ b/source/catalog.html
@@ -375,7 +375,7 @@
 
     <!-- Адрес и карта -->
 
-    <section class="address">
+    <div class="address">
       <div class="address__contacts-background">
         <div class="container address__contacts-container">
           <section class="address__contacts">
@@ -412,7 +412,7 @@
         </div>
       </section>
 
-    </section>
+    </div>
 
   </main>
 
@@ -432,7 +432,7 @@
           <li class="social__item social__item--vkontakte">
             <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
               <span class="visually-hidden">Мы в Вконтакте</span>
-              <svg width="23" ; height="16" ;>
+              <svg width="23" height="16">
                 <use xlink:href="img/svg/sprite.svg#vk"></use>
               </svg>
             </a>
